--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,12 @@ python = "^3.12"
 fastapi = "^0.115.5"
 uvicorn = "^0.32.1"
 pandas = "^2.2.3"
-numpy = "^2.1.3"
 scikit-learn = "^1.5.2"
 openpyxl = "^3.1.5"
 optbinning = "^0.20.0"
 statsmodels = "^0.14.4"
 optuna = "^4.1.0"
+catboost = "^1.2.7"
 
 
 [tool.poetry.group.dev.dependencies]
